--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,13 @@ Thumbs.db
 *.log
 
 # Sensitive data
+.env
 config.local.json
 *.backup
+
+# Data directories
+data/
+vectordb/
 
 # MCP testing
 .mcp_test/
