--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 services:
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant-server
+    ports:
+      - "6333:6333"
+    volumes:
+      - ./data/qdrant_storage:/qdrant/storage
+    restart: unless-stopped
+
   book-research-mcp:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: book-research-mcp
+    depends_on:
+      - qdrant
 
     volumes:
       # User's data directories (read-only)
@@ -11,7 +22,6 @@ services:
       - ${SCRIVENER_PROJECT_PATH}:/mnt/scrivener:ro
 
       # Persistent storage (read-write)
-      - ./data/vectordb:/data/vectordb
       - ./data/logs:/data/logs
 
       # Configuration files
@@ -20,7 +30,7 @@ services:
 
     environment:
       - EMBEDDING_MODEL=${EMBEDDING_MODEL:-all-mpnet-base-v2}
-      - VECTORDB_PATH=/data/vectordb
+      - QDRANT_URL=http://qdrant:6333
       - DEBUG=${DEBUG:-false}
       - ZOTERO_PATH=/mnt/zotero
       - SCRIVENER_PATH=/mnt/scrivener
