first MCP-less prototype

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,8 @@
-# Book Research MCP Configuration
-# Copy this file to .env and fill in your actual paths
+# Zotero data directory path
+ZOTERO_DATA_PATH=/Users/yourusername/Zotero
 
-# REQUIRED: Path to your Zotero data directory
-# macOS: ~/Zotero
-# Linux: ~/Zotero
-# Windows: C:\Users\<username>\Zotero
-ZOTERO_DATA_PATH=/path/to/your/Zotero
+# Scrivener project path
+SCRIVENER_PROJECT_PATH=/Users/yourusername/Dropbox/Apps/Scrivener/YourProject.scriv
 
-# REQUIRED: Path to your Scrivener project (.scriv bundle)
-# macOS: ~/Documents/MyProject.scriv or ~/Dropbox/Apps/Scrivener/MyProject.scriv
-# Windows: C:\Users\<username>\Documents\MyProject.scriv
-SCRIVENER_PROJECT_PATH=/path/to/your/Project.scriv
-
-# OPTIONAL: Embedding model (default: all-MiniLM-L6-v2)
-# Options:
-#   - all-MiniLM-L6-v2 (fast, good quality, works well on CPU - recommended)
-#   - all-mpnet-base-v2 (best quality, requires GPU for good speed)
-#   - paraphrase-multilingual-MiniLM-L12-v2 (for non-English content)
-EMBEDDING_MODEL=all-MiniLM-L6-v2
-
-# OPTIONAL: Vector database storage location (default: ./data/vectordb)
-VECTORDB_PATH=./data/vectordb
-
-# OPTIONAL: Enable debug logging (default: false)
+# Debug mode
 DEBUG=false
