--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,17 @@
 [project]
-name = "book-chapter-planner"
+name = "book-writing-buddy"
 version = "0.1.0"
-description = "AI-powered tool to analyze research materials for book chapter preparation"
-requires-python = ">=3.8"
+description = "Research assistant for book writers using Zotero and Scrivener"
+requires-python = ">=3.11"
 dependencies = [
     "pick>=2.2.0",
+    "qdrant-client>=1.7.0",
+    "sentence-transformers>=2.2.0",
+    "structlog>=23.1.0",
+    "watchdog>=3.0.0",
+    "pypdf>=3.0.0",
+    "beautifulsoup4>=4.12.0",
+    "striprtf>=0.0.26",
 ]
 
 [tool.ruff]
