--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,30 @@
-# Zotero data directory path
-ZOTERO_DATA_PATH=/Users/yourusername/Zotero
+# ============================================================
+# Cornell LiteLLM Proxy Configuration
+# ============================================================
+# For Cornell users - get API key from Cornell AI IT
+OPENAI_API_KEY="your-cornell-api-key-here"
+OPENAI_API_BASE="https://api.ai.it.cornell.edu"
 
-# Scrivener project path
+# Model Configuration
+# Default model used by the agent
+DEFAULT_MODEL=anthropic.claude-4.5-haiku
+
+# Model tiers for /model command
+MODEL_GOOD=anthropic.claude-4.5-haiku
+MODEL_BETTER=anthropic.claude-4.5-sonnet
+MODEL_BEST=anthropic.claude-4.5-opus
+
+# ============================================================
+# Qdrant Vector Database
+# ============================================================
+# URL to Qdrant server (Docker or external)
+QDRANT_URL=http://localhost:6333
+
+# ============================================================
+# Data Source Paths
+# ============================================================
+# Path to Zotero data directory
+ZOTERO_PATH=/Users/yourusername/Zotero
+
+# Path to Scrivener project
 SCRIVENER_PROJECT_PATH=/Users/yourusername/Dropbox/Apps/Scrivener/YourProject.scriv
-
-# Debug mode
-DEBUG=false
