--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,16 @@ services:
       - ./data/qdrant_storage:/qdrant/storage
     restart: unless-stopped
 
-  indexer:
+  watcher:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: book-research-indexer
+    container_name: book-research-watcher
     depends_on:
       - qdrant
     volumes:
       # User's data directories (read-only)
-      - ${ZOTERO_DATA_PATH}:/mnt/zotero:ro
+      - ${ZOTERO_PATH}:/mnt/zotero:ro
       - ${SCRIVENER_PROJECT_PATH}:/mnt/scrivener:ro
 
       # Persistent storage for logs
@@ -25,19 +25,10 @@ services:
 
       # Configuration files
       - ./config:/app/config:ro
-      - ./config.local.json:/app/config.local.json:ro
 
     environment:
       - QDRANT_URL=http://qdrant:6333
       - ZOTERO_PATH=/mnt/zotero
       - SCRIVENER_PATH=/mnt/scrivener
-      - DEBUG=${DEBUG:-false}
 
     restart: unless-stopped
-
-    healthcheck:
-      test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
