Fix Scrivener manuscript folder filtering and chapter 0 indexing
Major changes:
- Add SCRIVENER_MANUSCRIPT_FOLDER env var to filter indexing to specific folder
- Implement sequential chapter numbering based on manuscript structure
- Fix critical falsy value bugs preventing chapter 0 (Preface) from indexing
- Add dynamic detection for Preface/Introduction as chapter 0 (0A/0B for multiple)
- Add cleanup before reindexing to prevent duplicates

Technical fixes:
1. UUID extraction: Use parent directory name instead of stem (content.rtf issue)
2. Chapter metadata propagation: Inherit chapter numbers/titles to nested documents
3. Falsy value bug #1: Use 'is not None' in _build_uuid_mapping for chapter_num checks
4. Falsy value bug #2: Use 'is not None' when adding chapter_number to metadata
5. Reindex cleanup: Delete old source data before reindexing

Updated files:
- src/scrivener_parser.py: Add _assign_sequential_chapters and _filter_by_manuscript_folder
- src/indexer/scrivener_indexer.py: Fix UUID extraction and falsy value bugs
- src/vectordb/client.py: Add delete_by_source method
- src/cli.py: Add cleanup before reindex
- README.md: Document chapter numbering system
- docker-compose.yml: Add SCRIVENER_MANUSCRIPT_FOLDER env var
- All indexer scripts: Pass manuscript_folder parameter

Tested: Verified Preface (chapter 0) now indexes correctly with proper metadata.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ZOTERO_PATH=/mnt/zotero
       - ZOTERO_ROOT_COLLECTION=${ZOTERO_ROOT_COLLECTION:-}
       - SCRIVENER_PATH=/mnt/scrivener
+      - SCRIVENER_MANUSCRIPT_FOLDER=${SCRIVENER_MANUSCRIPT_FOLDER:-}
       - MODEL_CACHE_DIR=/models
 
     restart: unless-stopped
