--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,32 @@
 # ============================================================
-# Cornell LiteLLM Proxy Configuration
+# LLM Configuration (Online)
 # ============================================================
-# For Cornell users - get API key from Cornell AI IT
+# Primary LLM API (e.g., LiteLLM proxy, OpenAI, Anthropic, etc.)
 OPENAI_API_KEY="your-api-key-here"
 OPENAI_API_BASE="https://api.openai.com/v1"
 
-# Model Configuration
-# Default model used by the agent
+# Default model used by the agent (when online)
+# This is the primary model for the conversational agent
 DEFAULT_MODEL=gpt-5
 
-# Model tiers for /model command
-MODEL_GOOD=gpt-5-mini
-MODEL_BETTER=gpt-5
-MODEL_BEST=gpt-5-pro
+# Model tiers for /model command (online tiers)
+MODEL_GOOD=gpt-5-mini      # Fast & economical
+MODEL_BETTER=gpt-5         # Balanced
+MODEL_BEST=gpt-5-pro       # Highest quality
+
+# ============================================================
+# Offline Operation (Ollama Fallback)
+# ============================================================
+# If the online LLM is unavailable, the agent automatically
+# falls back to a local Ollama instance for offline operation
+#
+# Ollama URL (default: http://localhost:11434/v1)
+OLLAMA_BASE_URL=http://localhost:11434/v1
+
+# Offline model to use with Ollama
+# Recommended: llama3.2:3b (fast), llama3.1:8b (better quality)
+# Run: ollama pull llama3.2:3b
+OFFLINE_AGENT_MODEL=llama3.2:3b
 
 # ============================================================
 # Qdrant Vector Database
