--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,10 @@ dependencies = [
     "pypdf>=3.0.0",
     "beautifulsoup4>=4.12.0",
     "striprtf>=0.0.26",
-    "langchain>=1.1.3",
-    "langchain-openai>=1.1.3",
-    "langgraph>=1.0.5",
     "rich>=14.2.0",
     "python-dotenv>=1.2.1",
+    "claude-agent-sdk>=0.1.19",
+    "anthropic>=0.75.0",
 ]
 
 [tool.ruff]
